--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,7 @@ header h1 {
 .refresh-btn {
   text-decoration: none;
   padding: 6px;
-  background-color: #ff9203fd;;
+  background-color: #ff9203fd;
   color: #ffff;
   font-weight: 700;
 }
@@ -96,16 +96,15 @@ button {
 .submit-btn {
   width: 100px;
   float: right;
-  background-color: #ff9203fd;;
+  background-color: #ff9203fd;
   color: #ffff;
   font-weight: 700;
   border: none;
 }
 
 .submit-btn:hover,
-.refresh-btn:hover
-{
-  background-color: #f5be08fd;;
+.refresh-btn:hover {
+  background-color: #f5be08fd;
   color: #ffff;
   border-radius: 5px;
 }
